# algorithms-hw1

./: .gitignore  CMakeLists.txt  README.md
data/: sorted_students.csv
include/: student.cpp  student.hpp  student_list.cpp  student_list.hpp
include/implementation1/: student_list.cpp  student_list.h
include/implementation2/: student_list2.cpp  student_list2.h
include/implementation3/: student_list3.cpp  student_list3.h
include/student/: student.cpp
src/: main.cpp
